--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,29 @@
 name: CI Pipeline
 
-on: 
-    push:
-        branches: [ main ]
-    pull_request:
-        branches: [ main ]
+on:
+  push:
+    branches: [ "main" ]
 
-jobs: 
-    build:
-        runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-        steps: 
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with: 
-                node-version: 22
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            - name: Install dependencies 
-              run: |
-                cd app
-                npm ci 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-            - name: Run tests
-              run: |
-                cd app
-                npm test 
-
-            - name: Build Docker image
-              run: |
-                docker build -t bosofisan/dockerized-app-ci .
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: bosofisan/dockerized-app-ci:latest
